# go-can

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-package.yml
debian/systemd/: can-setup.target  can@.service
debian/udev/: 90-gocontroll-can.rules
src/: baseboard.rs  cli.rs  config.rs  defaults.rs  error.rs  main.rs  netlink.rs  output.rs  tui.rs
